openshift-templates/service-registry/route-service-registry.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: {}
  labels:
    app: service-registry
    app.kubernetes.io/component: service-registry
    app.kubernetes.io/instance: service-registry
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: store
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: service-registry
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: service-registry
    weight: 100
  wildcardPolicy: None
